# easysqlite

./: .pypirc  LICENSE  README.md  pyproject.toml  token-pypi.txt
Tests/: test1.py
src/EasySqlite-kos000113/: main.py
src/EasySqlite_kos000113.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
